--- a/pru.html
+++ b/pru.html
@@ -116,7 +116,7 @@
     <!-- Acerca de  -->
     <section class="container" id="nosotros">
         <div class="row pb-3 pt-3 text-center bg-light">
-            <div class="col-12" data-aos="zoom-in">
+            <div class="col" data-aos="zoom-in">
                 <h3>NOSOTROS</h3>
             </div>
         </div>
@@ -247,7 +247,8 @@
                                     <legend class="text-center header">¿Tiene una pregunta?</legend>
 
                                     <div class="form-group">
-                                        <input required id="fname" name="name" type="text" placeholder="Nombre completo" class="form-control">
+                                        <input required id="fname" name="name" type="text" placeholder="Nombre completo"
+                                            class="form-control">
                                     </div>
 
                                     <div class="form-group">
@@ -279,27 +280,23 @@
     </div>
 
     <!-- Footer  -->
-    <section id="footer" class="mt-4">
-        <div class="container justify-content-around text-center mb-4">
-            <div class="row">
-
-                <!-- <div class="w-100"></div> -->
-                <div class="col-sm-6 col-md-12 col-lg-4">
-                    <span style="font-size: 3em;">
-                        <a href="https://www.facebook.com/coomutranstur/" target="_blank"><i class="fab fa-facebook"></i></a>
-                        <a href="https://www.instagram.com/coomutranstur/" target="_blank"><i class="fab fa-instagram"></i></a>
-                        <a href="https://twitter.com/coomutranstur" target="_blank"><i class="fab fa-twitter-square"></i></a>
-                    </span>
-                </div>
+    <section id="derechos" class="mt-4">
+        <div class="row">
+            <div class="col-12 text-center">
+                <p>COOPERATIVA MULTIATIVA DE TRANSPORTE TURISTICO EN EL CORREGIMIENTO DE CORDOBA Y SAN CIPRIANO</p>
             </div>
-        </div>
-
-        <div id="derechos" class="col text-center">
-            <p>
-                COOPERATIVA MULTIATIVA DE TRANSPORTE TURISTICO EN EL
-                CORREGIMIENTO DE CORDOBA Y SAN CIPRIANO
-            </p>
-            <p><em>NIT: 830.500.789-9</em></p>
+            <div class="col-6 d-flex align-items-center justify-content-end">
+                <p class="d-inline">
+                    <em>NIT: 830.500.789-9</em>
+                </p>
+            </div>
+            <div class="col-6 d-flex align-items-center justify-content-start">
+                <span style="font-size: 2em;">
+                    <a href="https://www.facebook.com/coomutranstur/" target="_blank"><i class="fab fa-facebook"></i></a>
+                    <a href="https://www.instagram.com/coomutranstur/" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="https://twitter.com/coomutranstur" target="_blank"><i class="fab fa-twitter-square"></i></a>
+                </span>
+            </div>
 
         </div>
 
@@ -319,7 +316,7 @@
     <script src="js/holder.js"></script>
     <script src="js/wow.js"></script>
     <script src="js/scrollreveal.min.js"></script>
-    <script src="js/aos.js"></script>
+    <!-- <script src="js/aos.js"></script> -->
 
     <script src="js/app.js"></script>
 
