--- a/pru.html
+++ b/pru.html
@@ -113,92 +113,7 @@
     <!-- FIN INDEX -->
 
 
-    <!-- Acerca de  -->
-    <section class="container" id="nosotros">
-        <div class="row pb-3 pt-3 text-center bg-light">
-            <div class="col" data-aos="zoom-in">
-                <h3>NOSOTROS</h3>
-            </div>
-        </div>
-        <div class="row mt-4 align-items-center">
-            <div class="col-sm-12 col-md-3 col-xl-4 text-center" data-aos="zoom-in-right">
-                <img class="img-fluid" src="img/logo.jpg" alt="logo Coomutranstur">
-            </div>
-            <div class="col-sm-12 col-md-9 col-xl-8" data-aos="fade-left" data-aos-delay="500">
-                <p class="text-justify">Somos una organización sin ánimo de lucro, de interés social, perteneciente al
-                    sector
-                    de la economía
-                    solidaria, ubicado en el Consejo Comunitario de Comunidades Negras del corregimiento de Córdoba y
-                    San
-                    Cipriano de Buenaventura. Brindamos a través de convenios y alianzas estratégicas a los asociados y
-                    comunidad
-                    en general servicios de; recreación, cultura, gastronomía, turismo ecológico y transporte.
-                    Asociando a
-                    personas naturales que contribuyen económicamente a la cooperativa y son aportantes directos de su
-                    trabajo.
-                    Establecido el decreto 4588 de 2006.</p>
-            </div>
-        </div>
-        <hr>
-
-        <div class="row mt-4">
-            <div class="col" data-aos="fade-right">
-                <h3 class="display-4 text-center">Visión</h3>
-                <p class="text-justify">
-                    La Cooperativa <em></em>"<strong>COOMUTRANSTUR</strong>"</em> se consolidará como una empresa del
-                    sector de
-                    economía
-                    solidaria, que provea a
-                    los asociados y a sus familias desarrollo integral, al fortalecimiento del sector cooperativo y a
-                    la
-                    construcción del capital social en Colombia.
-                </p>
-            </div>
-            <div class="col" data-aos="fade-left">
-                <h3 class="display-4 text-center">Misión</h3>
-                <p class="text-justify">
-                    Contribuir al crecimiento económico, social, educativo y cultural de los asociados y sus familias
-                    promoviendo
-                    el ahorro con base en el aporte, otorgando créditos, fomentando la ayuda mutua, el compañerismo y
-                    el
-                    mejoramiento de la calidad de vida a través del empleo decente.
-                </p>
-            </div>
-        </div>
-        <hr>
-    </section>
-
-    <section class="container" id="politica">
-        <div class="row pb-3 pt-3 align-items-center bg-light">
-            <div class="col-12 text-center" data-aos="zoom-in">
-                <h3>POLÍTICA DE CALIDAD</h3>
-            </div>
-        </div>
-        <div class="row justify-content-around mt-4">
-            <div class="col d-flex align-items-center" data-aos="flip-left" data-aos-duration="1200">
-                <p class="text-justify">Estamos mejorando continuamente nuestros servicios para satisfacer las
-                    necesidades y
-                    expectativas
-                    de
-                    nuestros asociados, sus familias y demás grupos de interés, generando creación de valor sostenible.
-                </p>
-            </div>
-            <hr>
-            <div class="col text-center d-flex align-items-center justify-content-center mt-3" data-aos="flip-right"
-                data-aos-duration="1200">
-                <strong> Valores corporativos:</strong>
-                <ul class="list-unstyled">
-                    <li>Ayuda mutua</li>
-                    <li>Responsabilidad</li>
-                    <li>Honestidad </li>
-                    <li>Democracia</li>
-                    <li>Equidad </li>
-                    <li>Solidaridad </li>
-                    <li>Honestidad y transparencia</li>
-                </ul>
-            </div>
-        </div>
-    </section>
+    
 
     <!-- Ubicacion  -->
     <div class="container">
@@ -316,7 +231,7 @@
     <script src="js/holder.js"></script>
     <script src="js/wow.js"></script>
     <script src="js/scrollreveal.min.js"></script>
-    <!-- <script src="js/aos.js"></script> -->
+    <script src="js/aos.js"></script>
 
     <script src="js/app.js"></script>
 
