--- a/index.html
+++ b/index.html
@@ -36,11 +36,24 @@
   <section class="container-fluid pl-0 pr-0" id="main">
     <div class="bg-index">
       <div class="bg-color">
-        <header>
+        <header class="">
           <div class="">
             <!-- menu -->
-            <nav class="row navbar navbar-expand-lg pb-1">
-              <a class="navbar-brand" href="#">Coomutranstur<br></a>
+            <nav class="row navbar navbar-expand-lg bg-white">
+              <a class="navbar-brand ml-3 text-green" href="#"><span class="title font-weight-bold">Coomutranstur</span><br></a>
+              <ul class="navbar-nav mt-2 mt-lg-0 ml-auto">
+                <li class="nav-item">
+                  <a href="https://www.facebook.com/coomutranstur/" target="_blank"><i class="fab fa-facebook fa-2x"></i></a>
+                </li>
+                <li class="nav-item">
+                  <a href="https://www.instagram.com/coomutranstur/" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
+                </li>
+                <li class="nav-item">
+                  <a href="https://twitter.com/coomutranstur" target="_blank"><i class="fab fa-twitter-square fa-2x"></i></a>
+                </li>
+              </ul>
+            </nav>
+            <nav class="row navbar navbar-expand-lg bg-nav-menu">
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
                 ria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon">
@@ -48,7 +61,7 @@
                 </span>
               </button>
               <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                <ul class="navbar-nav mt-2 mt-lg-0 ml-auto">
+                <ul class="navbar-nav mt-2 mt-lg-0 mr-auto">
                   <li class="nav-item active">
                     <a class="nav-link" href="#nosotros">Guía turística</a>
                   </li>
@@ -73,16 +86,22 @@
           </div>
         </header>
         <!-- texto main -->
-        <div class="jumbotron jumbotron-fluid bg-transparent">
-          <div class="container">
-            <div class="row justify-content-center align-items-center">
-              <div class="col-12 col-md-6 col-xl-6 text-center">
-                <!-- <p class="lead text-white">COOMOTRANSTUR</p>
+        <br>
+        <br>
+        <br>
+        <div class="container mt-3">
+          <div class="row justify-content-center align-items-center">
+            <!-- <p class="lead text-white">COOMOTRANSTUR</p>
                 <p class="display-4 text-white">Empresa líder en el turismo a sancipriano</p> -->
-                <p class="lead text-white text-center">COOMOTRANSTUR</p>
-                <p class="display-4 text-white text-center">Empresa líder en el turismo a sancipriano</p>
-                <button class="btn btn-primary btn-lg mt-5">Contáctanos</button>
-              </div>
+            <!-- <p class="lead text-white text-center">LOGO DE LA EMPRESA</p> -->
+            <div class="col-sm-12 col-md-6 col-xl-6 logo-index d-none d-sm-block" data-aos="zoom-in-right">
+              <img class="img-fluid" src="img/logo.png" alt="logo Coomutranstur">
+            </div>
+            <div class="col-sm-12 col-md-6 col-xl-6 text-center">
+              <h3 class="text-white text-center">Empresa líder en el turismo a</h3>
+              <span class="display-3 sancipriano text-white text-center d-md-none d-lg-block d-lg-none d-xl-block d-xl-none d-none d-sm-block">sancipriano</span>
+              <h1><span class="sancipriano text-white text-center d-block d-sm-none d-sm-block d-md-none">sancipriano</span></h1>
+              <button class="btn btn-lg mt-5 text-center btn-contacto">Contáctanos</button>
             </div>
           </div>
         </div>
@@ -101,158 +120,7 @@
   <!-- FIN INDEX -->
 
 
-  <!-- Acerca de  -->
-  <section class="container" id="nosotros">
-    <div class="row pb-3 pt-3 text-center bg-light">
-      <div class="col-12" data-aos="zoom-in">
-        <h3>NOSOTROS</h3>
-      </div>
-    </div>
-    <div class="row mt-4 align-items-center">
-      <div class="col-sm-12 col-md-3 col-xl-4 text-center" data-aos="zoom-in-right">
-        <img class="img-fluid" src="img/logo.jpg" alt="logo Coomutranstur">
-      </div>
-      <div class="col-sm-12 col-md-9 col-xl-8" data-aos="fade-left" data-aos-delay="500">
-        <p class="text-justify">Somos una organización sin ánimo de lucro, de interés social, perteneciente al sector
-          de la economía
-          solidaria, ubicado en el Consejo Comunitario de Comunidades Negras del corregimiento de Córdoba y San
-          Cipriano de Buenaventura. Brindamos a través de convenios y alianzas estratégicas a los asociados y
-          comunidad
-          en general servicios de; recreación, cultura, gastronomía, turismo ecológico y transporte. Asociando a
-          personas naturales que contribuyen económicamente a la cooperativa y son aportantes directos de su trabajo.
-          Establecido el decreto 4588 de 2006.</p>
-      </div>
-    </div>
-    <hr>
 
-    <div class="row mt-4">
-      <div class="col" data-aos="fade-right">
-        <h3 class="display-4 text-center">Visión</h3>
-        <p class="text-justify">
-          La Cooperativa <em></em>"<strong>COOMUTRANSTUR</strong>"</em> se consolidará como una empresa del sector de
-          economía
-          solidaria, que provea a
-          los asociados y a sus familias desarrollo integral, al fortalecimiento del sector cooperativo y a la
-          construcción del capital social en Colombia.
-        </p>
-      </div>
-      <div class="col" data-aos="fade-left">
-        <h3 class="display-4 text-center">Misión</h3>
-        <p class="text-justify">
-          Contribuir al crecimiento económico, social, educativo y cultural de los asociados y sus familias
-          promoviendo
-          el ahorro con base en el aporte, otorgando créditos, fomentando la ayuda mutua, el compañerismo y el
-          mejoramiento de la calidad de vida a través del empleo decente.
-        </p>
-      </div>
-    </div>
-    <hr>
-  </section>
-
-  <section class="container" id="politica">
-    <div class="row pb-3 pt-3 align-items-center bg-light">
-      <div class="col-12 text-center" data-aos="zoom-in">
-        <h3>POLÍTICA DE CALIDAD</h3>
-      </div>
-    </div>
-    <div class="row justify-content-around mt-4">
-      <div class="col d-flex align-items-center" data-aos="flip-left" data-aos-duration="1200">
-        <p class="text-justify">Estamos mejorando continuamente nuestros servicios para satisfacer las necesidades y
-          expectativas
-          de
-          nuestros asociados, sus familias y demás grupos de interés, generando creación de valor sostenible.
-        </p>
-      </div>
-      <hr>
-      <div class="col text-center d-flex align-items-center justify-content-center mt-3" data-aos="flip-right"
-        data-aos-duration="1200">
-        <strong> Valores corporativos:</strong>
-        <ul class="list-unstyled">
-          <li>Ayuda mutua</li>
-          <li>Responsabilidad</li>
-          <li>Honestidad </li>
-          <li>Democracia</li>
-          <li>Equidad </li>
-          <li>Solidaridad </li>
-          <li>Honestidad y transparencia</li>
-        </ul>
-      </div>
-    </div>
-  </section>
-
-  <!-- Ubicacion  -->
-  <section class="container" id="ubicacion">
-    <div class="row pb-3 pt-3 text-center bg-light">
-      <div class="col" data-aos="zoom-in">
-        <h3>UBICACIÓN</h3>
-      </div>
-    </div>
-    <div class="row mt-4">
-      <div class="col-md-12 col-lg-6" data-aos="zoom-in">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d991.9239370580017!2d-76.92849067074255!3d3.8759615961146303!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e373bfac0c11d7d%3A0xa41564121f3506cb!2sCooperativa+Multiactiva+de+Transportadores+Turisticos+de+Cordoba+y+San+Cipriano+-+COOMUTRANSTUR!5e0!3m2!1ses-419!2sco!4v1539953258674"
-          width="100%" height="460" frameborder="0" style="border:0" allowfullscreen></iframe> </div>
-      <div class="col-md-12 col-lg-6" data-aos="zoom-in">
-
-        <div class="fb-comments" data-href="https://fserver.github.io/" data-width="100%" data-numposts="3"></div>
-
-      </div>
-    </div>
-  </section>
-
-  <!-- Footer  -->
-  <section id="footer" class="mt-4">
-    <div class="container justify-content-around text-center mb-4">
-      <div class="row">
-        <div class="col-sm-3 col-md-6 col-lg-4">
-          <div class="media">
-            <!-- Telefonos: -->
-            <i class="fas fa-phone-square fa-3x align-self-center mr-1"></i>
-            <div class="media-body">
-              (57) 3148340811 <br>
-              (57) 3148302152 <br>
-              (57) 3155777327
-            </div>
-          </div>
-        </div>
-
-        <div class="col-sm-3 col-md-6 col-lg-4 align-self-center">
-          <div class="media d-flex align-items-center">
-            <!-- Correo: -->
-            <i class="fas fa-envelope fa-2x align-self-center mr-1"></i>
-            <div class="media-body">
-              www.coomutranstur@hotmail.com
-            </div>
-          </div>
-        </div>
-
-        <!-- <div class="w-100"></div> -->
-        <div class="col-sm-6 col-md-12 col-lg-4">
-          <span style="font-size: 3em;">
-            <a href="https://www.facebook.com/coomutranstur/" target="_blank"><i class="fab fa-facebook"></i></a>
-            <a href="https://www.instagram.com/coomutranstur/" target="_blank"><i class="fab fa-instagram"></i></a>
-            <a href="https://twitter.com/coomutranstur" target="_blank"><i class="fab fa-twitter-square"></i></a>
-          </span>
-        </div>
-      </div>
-    </div>
-
-    <div id="derechos" class="col text-center">
-      <p>
-        COOPERATIVA MULTIATIVA DE TRANSPORTE TURISTICO EN EL
-        CORREGIMIENTO DE CORDOBA Y SAN CIPRIANO
-      </p>
-      <p><em>NIT: 830.500.789-9</em></p>
-
-    </div>
-
-  </section>
-
-
-  <!-- SCRIPTS -->
-  <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script> -->
-  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script> -->
 
 
 
@@ -272,4 +140,3 @@
 </div>
 
 </html>
-
