--- a/index.html
+++ b/index.html
@@ -40,18 +40,22 @@
           <div class="">
             <!-- menu -->
             <nav class="row navbar navbar-expand-lg bg-white">
-              <a class="navbar-brand ml-3 text-green" href="#"><span class="title font-weight-bold">Coomutranstur</span><br></a>
-              <ul class="navbar-nav mt-2 mt-lg-0 ml-auto">
-                <li class="nav-item">
-                  <a href="https://www.facebook.com/coomutranstur/" target="_blank"><i class="fab fa-facebook fa-2x"></i></a>
-                </li>
-                <li class="nav-item">
-                  <a href="https://www.instagram.com/coomutranstur/" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
-                </li>
-                <li class="nav-item">
-                  <a href="https://twitter.com/coomutranstur" target="_blank"><i class="fab fa-twitter-square fa-2x"></i></a>
-                </li>
-              </ul>
+              <div class="col">
+                <a class="navbar-brand ml-3 text-green" href="#"><span class="title font-weight-bold">Coomutranstur</span><br></a>
+              </div>
+              <div class="col d-none d-md-inline-block">
+                <ul class="navbar-nav mt-2 float-right">
+                  <li class="nav-item">
+                    <a href="https://www.facebook.com/coomutranstur/" target="_blank"><i class="fab fa-facebook fa-2x"></i></a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="https://www.instagram.com/coomutranstur/" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="https://twitter.com/coomutranstur" target="_blank"><i class="fab fa-twitter-square fa-2x"></i></a>
+                  </li>
+                </ul>
+              </div>
             </nav>
             <nav class="row navbar navbar-expand-lg bg-nav-menu">
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
@@ -96,6 +100,7 @@
             <!-- <p class="lead text-white text-center">LOGO DE LA EMPRESA</p> -->
             <div class="col-sm-12 col-md-6 col-xl-6 logo-index d-none d-sm-block" data-aos="zoom-in-right">
               <img class="img-fluid" src="img/logo.gif" alt="logo Coomutranstur">
+              <!-- <img class="img-fluid" src="img/logo2.png" alt="logo Coomutranstur"> -->
             </div>
             <div class="col-sm-12 col-md-6 col-xl-6 text-center">
               <h3 class="text-white text-center">Empresa líder en el turismo a</h3>
